[tool.poetry]
name = "asutp-controller"
version = "0.1.0"
description = ""
authors = ["Kirill Kartashov  <78963080+kirillcresh@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.94.1"
SQLAlchemy = "2.0.6"
black = "^24.4.2"
isort = "^5.13.2"
pydantic = "1.10.6"
uvicorn = "0.20.0"
PyJWT = "^2.8.0"
python-dotenv = "^1.0.1"
jinja2 = "^3.1.4"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
